[metadata]
name = pyfolio-reloaded
url = https://pyfolio.ml4trading.io
description = pyfolio is a Python library for performance and risk analysis of financial portfolios
long_description = file: README.md
long_description_content_type = text/markdown
maintainer = Applied AI, LLC
maintainer email = pm@ml4trading.io
author = Quantopian Inc
author email = opensource@quantopian.com
license = Apache License, Version 2.0
license_file = LICENSE

classifiers =
    Development Status :: 4 - Beta
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    License :: OSI Approved :: Apache Software License
    Intended Audience :: Science/Research
    Topic :: Scientific/Engineering
    Topic :: Scientific/Engineering :: Mathematics
    Operating System :: OS Independent


# See the docstring in versioneer.py for instructions. Note that you must
# re-run 'versioneer.py setup' after changing this section, and commit the
# resulting files.
[versioneer]
VCS = git
style = pep440
versionfile_source = pyfolio/_version.py
versionfile_build = pyfolio/_version.py
tag_prefix =
parentdir_prefix = pyfolio-

[nosetests]
verbosity = 2
with-ignore-docstrings = 1
with-timer = 1
timer-top-n = 15
with-coverage = 1
cover-package = pyfolio.tests
with-doctest = 1
logging-level = INFO

[options]
python_requires = >=3.7
include_package_data = True
install_requires =
    ipython>=3.2.3
    matplotlib>=1.4.0
    numpy>=1.11.1
    pandas>=0.18.1
    pytz>=2014.10
    scipy>=0.14.0
    scikit-learn>=0.16.1
    seaborn>=0.7.1
    empyrical-reloaded>=0.5.8

[options.extras_require]
all =
    %(doc)s
    %(dev)s
    %(test)s

test =
    tox>=2.3.1
    coverage>=4.0.3
    coveralls==3.0.1
    pytest>=6.2
    pytest-cov>=2.12
    parameterized>=0.6.1
    flake8>=3.9.1
    black

dev =
    flake8>=3.9.1
    black
    pre-commit>=2.12.1

doc =
    Cython
    Sphinx>=1.3.2
    numpydoc>=0.5.0
    sphinx-autobuild>=0.6.0
    pydata-sphinx-theme
    sphinx-markdown-tables
    sphinx_copybutton
    m2r2
